--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -20,8 +20,11 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Fetch Stock Data
-        run: node update_stocks.js
+        run: node scripts/update_stocks_stooq.js
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
