--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "axios": "^1.13.2",
+    "csv-parse": "^6.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yahoo-finance2": "^3.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
