--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stock-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dharness.github.io/stock-charts",
+  "homepage": "https://dharness.github.io/stock-tracker",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
