--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.13.2",
     "csv-parse": "^6.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
     "typescript": "^4.9.5",
